fix: Wrong padding bottom for Chrome
With Chrome-based browser, the padding at the bottom of the recent item
list is wrong. We have to force it with a non null value.

Part of story #28835: have a full-text search backend based on Meilisearch

--- a/src/themes/common/css/utils/_switch-to.scss
+++ b/src/themes/common/css/utils/_switch-to.scss
@@ -348,6 +348,11 @@ $content-text-spacing-left: calc($items-icon-size + $items-icon-margin + $items-
     font-size: 0.875rem;
 }
 
+.switch-to-recent-items-list {
+    // force padding bottom at the end of recent items on Chrome
+    padding-bottom: 0.1px;
+}
+
 .switch-to-recent-items-error {
     opacity: 0.75;
     color: var(--tlp-danger-color-on-dark-background);
